change download link

--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
           <h2 id="project_tagline">XBMC 百度音乐随心听插件</h2>
 
             <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/zhangyuanwei/plugin.audio.baidufm/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/zhangyuanwei/plugin.audio.baidufm/tarball/master">Download this project as a tar.gz file</a>
+              <a class="zip_download_link" href="http://zhangyuanwei.github.io/plugin.audio.baidufm/release/plugin.audio.baidufm-0.0.2.zip">Download .zip file</a>
             </section>
         </header>
     </div>
